--- a/index.HTML
+++ b/index.HTML
@@ -111,7 +111,7 @@ a { color: black;}
             <div><a href="#">deals</a></div>
             <br>
             <br>
-            <div> <button><a class="deal" href="#">book now !</a></div></button>
+            <div> <button><a class="deal" href="#">book now </a></div></button>
         </div>
     </sidebr>
 
